--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 02 14:53:09 PST 2016
-ndk.dir=/Users/Cody/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/Cody/Library/Android/sdk
+#Wed Apr 13 20:42:40 PDT 2016
+sdk.dir=/Users/ThDirtyHam/Library/Android/sdk
