--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 13 20:42:40 PDT 2016
-sdk.dir=/Users/ThDirtyHam/Library/Android/sdk
+#Wed Apr 20 17:04:06 PDT 2016
+ndk.dir=/Users/Cody/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/Cody/Library/Android/sdk
